frontend/test/should_fail/pattern_005b.grg
using patt;

pattern Foo(a:A, b:B)
{
	:Node;	
}

test t {
	a:Node;
	b:A; 
	foo:Foo(a, b);
}